--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "axios": "^1.3.4",
     "bootstrap-vue-3": "^0.5.1",
     "element-plus": "^2.2.32",
     "pinia": "^2.0.28",
